Change Log for the Area Diffraction Machine

-------

Change log for Version 2 (version 2 has all the version 1 changes in it):

Changes in the Betas

    Major
    -   Migrated the over from using Abhik's formulas for the
        geometric transform to Josh's formulas derived in
        the software manual. See the manual for a discussion
        of these equations.
    -   Modified the caking and integrating algorithm so that
        they will truncate all
    -   Adding support for Bruker data files.
    -   Allow for caking in 2theta.
    -   Ignores any peaks found inside of polygon masks. Also,
        these peaks are no longer displayed on top of the
        diffraction and cake displays when they are on 
        top of a polygon mask.
    -   Improved the formatting of saved peak list files.
        They have a better structure (space separated instead
        of tab separated) and a more verbose header.
    -   New "Save Last Fit" button can be used to save all of the 
        information about the previous calibration to a text file.
    -   Minor tic marks for intensity integration's log Y axis.
    -   New "Preferences" menu opened form the "File" menu can be 
        used to specify the default folder to select files form.
    -   New "Set As Initialization" option can be used to save
        a recorded macro to be run each time the program opens.
        This can be used to set various check boxes, colors, and
        user inputs to nice default values.
    -   New Abort Button to stop a macro.

    Minor 
    -   The size of the inputs in the GUI has been increased 
        to help view big numbers.
    -   Fix a bug where the integration window wouldn't resize
        properly and sometimes the labels and check box at
        the bottom of the window would disappear
    -   Changed the formatting of calibration parameters saved
        to a file. For brevity, the keywords R, pl, and ph are 